# docs/swagger.json
@@ -11,10 +11,10 @@
   },
   "servers": [
     {
-      "url": "https://h2o-tracker-api.onrender.com"
+      "url": "http://localhost:3000"
     },
     {
-      "url": "http://localhost:3000"
+      "url": "https://h2o-tracker-api.onrender.com"
     }
   ],
   "tags": [
@@ -30,7 +30,9 @@
   "paths": {
     "/auth/register": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Registering a new user",
         "operationId": "registerUser",
         "description": "Registration of a new user in the system",
@@ -77,7 +79,9 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log in to the system",
         "operationId": "loginUser",
         "description": "Sign in existing user",
@@ -92,7 +96,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["email", "password"],
+                "required": [
+                  "email",
+                  "password"
+                ],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -116,7 +123,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -155,7 +166,9 @@
     },
     "/auth/logout": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log out of the system",
         "operationId": "logoutUser",
         "description": "Logout user from the system by clearing authentication tokens and session",
@@ -179,9 +192,73 @@
         }
       }
     },
+    "/users/current": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get information about the current user",
+        "operationId": "getCurrentUser",
+        "description": "This endpoint allows you to check whether the session is active and return the current user's data. In case of an invalid token or session expiration, a 401 error is returned.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully obtaining user information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "User data retrieved successfully"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "5f4e5b1f4b5e9c001fd9c35d"
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "user@example.com"
+                        },
+                        "dailyNorm": {
+                          "type": "integer",
+                          "example": 1800
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized (the token is invalid or missing)",
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "description": "Server error",
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/users/{id}": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Get User by id",
         "operationId": "getUserById",
         "description": "Retrieve a user data with the given id.",
@@ -209,7 +286,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["status", "message", "data"],
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -242,7 +323,9 @@
         }
       },
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Update user data",
         "operationId": "updateUserById",
         "description": "Update a user's information by id.",
@@ -284,7 +367,10 @@
                   "gender": {
                     "description": "User's gender identity. Options: male, female.",
                     "type": "string",
-                    "enum": ["male", "female"],
+                    "enum": [
+                      "male",
+                      "female"
+                    ],
                     "example": "female"
                   },
                   "oldPassword": {
@@ -343,7 +429,9 @@
     },
     "/users/{id}/avatar": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Update user avatar",
         "operationId": "updateAvatar",
         "description": "Upload or update user profile avatar image",
@@ -376,7 +464,9 @@
                     "format": "binary"
                   }
                 },
-                "required": ["avatar"]
+                "required": [
+                  "avatar"
+                ]
               }
             }
           }
@@ -428,7 +518,9 @@
     },
     "/water": {
       "post": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Add water",
         "operationId": "addWaterRecord",
         "description": "Add new water record",
@@ -442,7 +534,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": ["date", "waterVolume"],
+                "required": [
+                  "date",
+                  "waterVolume"
+                ],
                 "properties": {
                   "date": {
                     "description": "Date",
@@ -468,7 +563,12 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["date", "waterVolume", "userId", "_id"],
+                  "required": [
+                    "date",
+                    "waterVolume",
+                    "userId",
+                    "_id"
+                  ],
                   "properties": {
                     "date": {
                       "type": "string",
@@ -499,7 +599,9 @@
     },
     "/water/water-rate": {
       "patch": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Updating water daily norm",
         "operationId": "updateWaterRate",
         "description": "Updating water daily norm.",
@@ -559,7 +661,9 @@
     },
     "/water/{id}": {
       "delete": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Delete water record",
         "operationId": "deleteWaterRecord",
         "description": "Delete water record",
@@ -589,7 +693,9 @@
         }
       },
       "patch": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Update record by id",
         "operationId": "updateWaterRecord",
         "description": "Update record by id",
@@ -614,6 +720,10 @@
             "application/json": {
               "schema": {
                 "type": "object",
+                "required": [
+                  "date",
+                  "waterVolume"
+                ],
                 "properties": {
                   "date": {
                     "description": "Date",
@@ -657,7 +767,9 @@
     },
     "/water/today": {
       "get": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Get list of water records",
         "operationId": "getTodayWater",
         "description": "Get list of water records from today",
@@ -673,7 +785,11 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": ["percentage", "totalAmount", "records"],
+                  "required": [
+                    "percentage",
+                    "totalAmount",
+                    "records"
+                  ],
                   "properties": {
                     "percentage": {
                       "type": "string",
@@ -703,7 +819,9 @@
     },
     "/water/month": {
       "get": {
-        "tags": ["Water"],
+        "tags": [
+          "Water"
+        ],
         "summary": "Get statistic for month",
         "operationId": "getMonthlyStats",
         "description": "Get statistic for month",
@@ -742,7 +860,12 @@
                   "description": "List of days statistics",
                   "items": {
                     "type": "object",
-                    "required": ["date", "dailyGoal", "percentage", "entries"],
+                    "required": [
+                      "date",
+                      "dailyGoal",
+                      "percentage",
+                      "entries"
+                    ],
                     "properties": {
                       "date": {
                         "type": "string",
@@ -794,11 +917,18 @@
             "example": "password123"
           }
         },
-        "required": ["email", "password"]
+        "required": [
+          "email",
+          "password"
+        ]
       },
       "auth201": {
         "type": "object",
-        "required": ["status", "message", "data"],
+        "required": [
+          "status",
+          "message",
+          "data"
+        ],
         "properties": {
           "status": {
             "type": "integer",
@@ -826,7 +956,10 @@
       },
       "users": {
         "type": "object",
-        "required": ["email", "password"],
+        "required": [
+          "email",
+          "password"
+        ],
         "properties": {
           "name": {
             "description": "User's name",
@@ -851,7 +984,10 @@
           "gender": {
             "description": "User's gender identity. Options may include male, female",
             "type": "string",
-            "enum": ["male", "female"],
+            "enum": [
+              "male",
+              "female"
+            ],
             "example": "female"
           },
           "avatar": {
@@ -878,7 +1014,12 @@
       },
       "waterRecord": {
         "type": "object",
-        "required": ["date", "waterVolume", "userId", "_id"],
+        "required": [
+          "date",
+          "waterVolume",
+          "userId",
+          "_id"
+        ],
         "properties": {
           "date": {
             "type": "string",
@@ -906,7 +1047,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -918,7 +1063,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -947,7 +1094,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -959,7 +1110,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -978,7 +1131,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -990,7 +1147,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1036,7 +1195,11 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": ["status", "message", "data"],
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1048,7 +1211,9 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": ["message"],
+                  "required": [
+                    "message"
+                  ],
                   "properties": {
                     "message": {
                       "type": "string",
